// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Select Async Select 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-rx2v65-SelectShowcase"
  >
    <div
      role="button"
    >
      <div
        className="css-17wyy39"
      >
        <div
          className="css-o66dxn-TextInputWrapper"
        >
          <div
            className="css-tx7bk7-TextInputWrapper"
          >
            <div
              className="css-1kf684z-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  data-testid="select-input"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  placeholder="Flavour"
                  readOnly={false}
                  required={false}
                  value=""
                />
                <label
                  className="css-6ez3qq-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <div
                  className="css-1o9yjvp"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Async Select with min characters 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-rx2v65-SelectShowcase"
  >
    <div
      role="button"
    >
      <div
        className="css-17wyy39"
      >
        <div
          className="css-o66dxn-TextInputWrapper"
        >
          <div
            className="css-tx7bk7-TextInputWrapper"
          >
            <div
              className="css-1kf684z-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  data-testid="select-input"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  placeholder="Flavour"
                  readOnly={false}
                  required={false}
                  value=""
                />
                <label
                  className="css-6ez3qq-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <div
                  className="css-1o9yjvp"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Disabled Select 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-jyt8cr-TextInputWrapper"
            >
              <div
                className="css-1kf684z-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    data-testid="select-input"
                    disabled={true}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value=""
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <div
                    className="css-1o9yjvp"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-wjx7nl-TextInputWrapper"
            >
              <div
                className="css-1kf684z-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    data-testid="select-input"
                    disabled={true}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value=""
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <div
                    className="css-1o9yjvp"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-1fhckh5-TextInputWrapper"
            >
              <div
                className="css-1kf684z-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    data-testid="select-input"
                    disabled={true}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value=""
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <div
                    className="css-1o9yjvp"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Not Searchable Select 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-tx7bk7-TextInputWrapper"
            >
              <div
                className="css-1kf684z-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={true}
                    required={false}
                    value=""
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <div
                    className="css-1o9yjvp"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-arrybn-TextInputWrapper"
            >
              <div
                className="css-ziw0v5-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-bzlo54"
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    className="css-1avh9vo-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <div
                    className="css-1o9yjvp"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-arrybn-TextInputWrapper"
            >
              <div
                className="css-1kf684z-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    className="css-1avh9vo-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <div
                    className="css-1o9yjvp"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select with Highlight 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-tx7bk7-TextInputWrapper"
            >
              <div
                className="css-1kf684z-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value=""
                  />
                  <label
                    className="css-6ez3qq-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <div
                    className="css-1o9yjvp"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select with edge case 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "width": 250,
      }
    }
  >
    <div
      role="button"
    >
      <div
        className="css-17wyy39"
      >
        <div
          className="css-o66dxn-TextInputWrapper"
        >
          <div
            className="css-tx7bk7-TextInputWrapper"
          >
            <div
              className="css-1kf684z-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  data-testid="select-input"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  readOnly={false}
                  required={false}
                  value="Chocolate"
                />
                <label
                  className="css-1avh9vo-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <div
                  className="css-1o9yjvp"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    role="button"
  >
    <div
      className="css-17wyy39"
    >
      <div
        className="css-o66dxn-TextInputWrapper"
      >
        <div
          className="css-tx7bk7-TextInputWrapper"
        >
          <div
            className="css-1kf684z-TextInputWrapper"
          >
            <div
              className="css-1u4znjd"
            >
              <input
                className="css-1h245c6"
                data-testid="select-input"
                disabled={false}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                placeholder="Flavour"
                readOnly={false}
                required={false}
                value="Chocolate"
              />
              <label
                className="css-1avh9vo-Label"
              >
                Flavour
                 
              </label>
            </div>
            <div
              className="css-mt0mcx-IconWrapper"
            >
              <div
                className="css-1o9yjvp"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "width": 100,
      }
    }
  >
    <div
      role="button"
    >
      <div
        className="css-17wyy39"
      >
        <div
          className="css-o66dxn-TextInputWrapper"
        >
          <div
            className="css-tx7bk7-TextInputWrapper"
          >
            <div
              className="css-1kf684z-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  data-testid="select-input"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  readOnly={false}
                  required={false}
                  value="Chocolate"
                />
                <label
                  className="css-1avh9vo-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <div
                  className="css-1o9yjvp"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-z7hcm5-Icon"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select with icon and size 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-arrybn-TextInputWrapper"
            >
              <div
                className="css-ziw0v5-TextInputWrapper"
              >
                <div
                  className="css-g5h1c4-IconWrapper"
                >
                  <img
                    height="16"
                    src="https://brandmark.io/logo-rank/random/pepsi.png"
                    style={
                      Object {
                        "background": "red",
                      }
                    }
                    width="16"
                  />
                </div>
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-bzlo54"
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    className="css-1avh9vo-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <div
                    className="css-1o9yjvp"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-arrybn-TextInputWrapper"
            >
              <div
                className="css-1kf684z-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    className="css-1avh9vo-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <img
                    height="16"
                    src="https://brandmark.io/logo-rank/random/pepsi.png"
                    style={
                      Object {
                        "background": "red",
                      }
                    }
                    width="16"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-arrybn-TextInputWrapper"
            >
              <div
                className="css-1kf684z-TextInputWrapper"
              >
                <div
                  className="css-g5h1c4-IconWrapper"
                >
                  <img
                    height="16"
                    src="https://brandmark.io/logo-rank/random/pepsi.png"
                    style={
                      Object {
                        "background": "red",
                      }
                    }
                    width="16"
                  />
                </div>
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    className="css-1avh9vo-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <img
                    height="16"
                    src="https://brandmark.io/logo-rank/random/pepsi.png"
                    style={
                      Object {
                        "background": "red",
                      }
                    }
                    width="16"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select with label and statuses 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-17wyy39"
            >
              <div
                className="css-o66dxn-TextInputWrapper"
              >
                <div
                  className="css-11epart-TextInputWrapper"
                >
                  <div
                    className="css-1kf684z-TextInputWrapper"
                  >
                    <div
                      className="css-1u4znjd"
                    >
                      <input
                        className="css-1h245c6"
                        data-testid="select-input"
                        disabled={false}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Label"
                        readOnly={false}
                        required={false}
                        value="Chocolate"
                      />
                      <label
                        className="css-1crpb0-Label"
                      >
                        Label
                         
                      </label>
                    </div>
                    <div
                      className="css-mt0mcx-IconWrapper"
                    >
                      <div
                        className="css-1o9yjvp"
                      >
                        <span
                          className="css-1gnbc76-Icon"
                          onClick={[Function]}
                        >
                          <span
                            className="css-z7hcm5-Icon"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-1lgcoxd-TextInputWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-hnerwf-Icon"
                  />
                </span>
                Error in Select
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-17wyy39"
            >
              <div
                className="css-o66dxn-TextInputWrapper"
              >
                <div
                  className="css-1i60c8k-TextInputWrapper"
                >
                  <div
                    className="css-1kf684z-TextInputWrapper"
                  >
                    <div
                      className="css-1u4znjd"
                    >
                      <input
                        className="css-1h245c6"
                        data-testid="select-input"
                        disabled={false}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Label"
                        readOnly={false}
                        required={false}
                        value="Chocolate"
                      />
                      <label
                        className="css-1crpb0-Label"
                      >
                        Label
                         
                      </label>
                    </div>
                    <div
                      className="css-mt0mcx-IconWrapper"
                    >
                      <div
                        className="css-1o9yjvp"
                      >
                        <span
                          className="css-1gnbc76-Icon"
                          onClick={[Function]}
                        >
                          <span
                            className="css-z7hcm5-Icon"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-1lgcoxd-TextInputWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-hnerwf-Icon"
                  />
                </span>
                Error in Select
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-17wyy39"
            >
              <div
                className="css-o66dxn-TextInputWrapper"
              >
                <div
                  className="css-uvudyi-TextInputWrapper"
                >
                  <div
                    className="css-1kf684z-TextInputWrapper"
                  >
                    <div
                      className="css-1u4znjd"
                    >
                      <input
                        className="css-1h245c6"
                        data-testid="select-input"
                        disabled={false}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Label"
                        readOnly={false}
                        required={false}
                        value="Chocolate"
                      />
                      <label
                        className="css-1crpb0-Label"
                      >
                        Label
                         
                      </label>
                    </div>
                    <div
                      className="css-mt0mcx-IconWrapper"
                    >
                      <div
                        className="css-1o9yjvp"
                      >
                        <span
                          className="css-1gnbc76-Icon"
                          onClick={[Function]}
                        >
                          <span
                            className="css-z7hcm5-Icon"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-1lgcoxd-TextInputWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-hnerwf-Icon"
                  />
                </span>
                Error in Select
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-17wyy39"
            >
              <div
                className="css-o66dxn-TextInputWrapper"
              >
                <div
                  className="css-tx7bk7-TextInputWrapper"
                >
                  <div
                    className="css-1kf684z-TextInputWrapper"
                  >
                    <div
                      className="css-1u4znjd"
                    >
                      <input
                        className="css-1h245c6"
                        data-testid="select-input"
                        disabled={false}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Label"
                        readOnly={false}
                        required={false}
                        value=""
                      />
                      <label
                        className="css-6ez3qq-Label"
                      >
                        Label
                         
                      </label>
                    </div>
                    <div
                      className="css-mt0mcx-IconWrapper"
                    >
                      <div
                        className="css-1o9yjvp"
                      >
                        <span
                          className="css-1gnbc76-Icon"
                          onClick={[Function]}
                        >
                          <span
                            className="css-z7hcm5-Icon"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-9lkybz-TextInputWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-18ctimf-Icon"
                  />
                </span>
                Error in Select
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-17wyy39"
            >
              <div
                className="css-o66dxn-TextInputWrapper"
              >
                <div
                  className="css-arrybn-TextInputWrapper"
                >
                  <div
                    className="css-1kf684z-TextInputWrapper"
                  >
                    <div
                      className="css-1u4znjd"
                    >
                      <input
                        className="css-1h245c6"
                        data-testid="select-input"
                        disabled={false}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Label"
                        readOnly={false}
                        required={false}
                        value=""
                      />
                      <label
                        className="css-6ez3qq-Label"
                      >
                        Label
                         
                      </label>
                    </div>
                    <div
                      className="css-mt0mcx-IconWrapper"
                    >
                      <div
                        className="css-1o9yjvp"
                      >
                        <span
                          className="css-1gnbc76-Icon"
                          onClick={[Function]}
                        >
                          <span
                            className="css-z7hcm5-Icon"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-9lkybz-TextInputWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-18ctimf-Icon"
                  />
                </span>
                Error in Select
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-17wyy39"
            >
              <div
                className="css-o66dxn-TextInputWrapper"
              >
                <div
                  className="css-1n16e3-TextInputWrapper"
                >
                  <div
                    className="css-1kf684z-TextInputWrapper"
                  >
                    <div
                      className="css-1u4znjd"
                    >
                      <input
                        className="css-1h245c6"
                        data-testid="select-input"
                        disabled={false}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onInput={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Label"
                        readOnly={false}
                        required={false}
                        value=""
                      />
                      <label
                        className="css-6ez3qq-Label"
                      >
                        Label
                         
                      </label>
                    </div>
                    <div
                      className="css-mt0mcx-IconWrapper"
                    >
                      <div
                        className="css-1o9yjvp"
                      >
                        <span
                          className="css-1gnbc76-Icon"
                          onClick={[Function]}
                        >
                          <span
                            className="css-z7hcm5-Icon"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-9lkybz-TextInputWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-18ctimf-Icon"
                  />
                </span>
                Error in Select
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Simple Select 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-tx7bk7-TextInputWrapper"
            >
              <div
                className="css-1kf684z-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    className="css-1avh9vo-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <div
                    className="css-1o9yjvp"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-arrybn-TextInputWrapper"
            >
              <div
                className="css-1kf684z-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    className="css-1avh9vo-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <div
                    className="css-1o9yjvp"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-17wyy39"
        >
          <div
            className="css-o66dxn-TextInputWrapper"
          >
            <div
              className="css-1n16e3-TextInputWrapper"
            >
              <div
                className="css-1kf684z-TextInputWrapper"
              >
                <div
                  className="css-1u4znjd"
                >
                  <input
                    className="css-1h245c6"
                    data-testid="select-input"
                    disabled={false}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Flavour"
                    readOnly={false}
                    required={false}
                    value="Chocolate"
                  />
                  <label
                    className="css-1avh9vo-Label"
                  >
                    Flavour
                     
                  </label>
                </div>
                <div
                  className="css-mt0mcx-IconWrapper"
                >
                  <div
                    className="css-1o9yjvp"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
